<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_act3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_between"
        android:text="@string/activity_3"
        android:textAlignment="center"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btn_from_third_to_first"
        android:layout_marginBottom="@dimen/margin_between"
        style="@style/buttonStyle"
        android:text="@string/to_first" />

    <Button
        android:id="@+id/btn_from_third_to_second"
        style="@style/buttonStyle"
        android:text="@string/to_second" />

</LinearLayout>