<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_game_button"
        style="@style/Button"
        android:layout_marginBottom="32dp"
        android:text="@string/start_game_text"
        app:layout_constraintBottom_toTopOf="@+id/score_button"
        app:layout_constraintEnd_toEndOf="@+id/score_button"
        app:layout_constraintStart_toStartOf="@+id/score_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/score_button"
        style="@style/Button"
        android:layout_marginBottom="32dp"
        android:text="@string/score_text"
        app:layout_constraintBottom_toTopOf="@+id/choose_card_cover_button"
        app:layout_constraintEnd_toEndOf="@+id/choose_card_cover_button"
        app:layout_constraintStart_toStartOf="@+id/choose_card_cover_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_card_cover_button"
        style="@style/Button"
        android:layout_marginBottom="64dp"
        android:text="@string/choose_card_cover_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>